flux/apps/utilities/gitlab-endpoint/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
    name: external-gitlab
    namespace: gitlab
subsets:
    - addresses:
          - ip: 10.67.1.107
      ports:
          - name: http
            port: 80
            protocol: TCP
