flux/apps/utilities/gitlab-endpoint/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-gitlab
    namespace: gitlab
spec:
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: 80
