flux/apps/utilities/gitlab-endpoint/ssh.yaml
apiVersion: v1
kind: Endpoints
metadata:
    name: external-gitlab-ssh
    namespace: gitlab
subsets:
    - addresses:
          - ip: 10.67.1.107
      ports:
          - name: ssh
            port: 222
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: external-gitlab-ssh
    namespace: gitlab
    annotations:
        external-dns.alpha.kubernetes.io/hostname: git.internal.axiom.lucasfehres.nl
spec:
    type: LoadBalancer
    ports:
        - name: ssh
          port: 22
          protocol: TCP
          targetPort: 222
