flux/apps/utilities/gitlab-endpoint/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: external-gitlab
    namespace: gitlab
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "gitlab.internal.axiom.lucasfehres.nl"
    rules:
        - backendRefs:
              - name: external-gitlab
                port: 80
